--- a/CarrierControlSystem/MDK/mdk.paths.props
+++ b/CarrierControlSystem/MDK/mdk.paths.props
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <MDKVersion>1.2.29</MDKVersion>
+    <MDKVersion>1.2.31</MDKVersion>
     <MDKGameBinPath>e:\steam\SteamApps\common\SpaceEngineers\Bin64</MDKGameBinPath>
-    <MDKInstallPath>c:\users\dragonmaster\appdata\local\microsoft\visualstudio\15.0_88c327cc\extensions\h4o0xvat.5mo</MDKInstallPath>
+    <MDKInstallPath>c:\users\dragonmaster\appdata\local\microsoft\visualstudio\15.0_88c327cc\extensions\54s4ckzz.lle</MDKInstallPath>
     <MDKOutputPath>C:\Users\DragonMaster\AppData\Roaming\SpaceEngineers\IngameScripts\local</MDKOutputPath>
   </PropertyGroup>
   <ItemGroup>
